css/stylesheet.css
html {
  overflow-y: scroll;
}

body {
  font-family: 'Helvetica', 'Calibri', sans-serif;
  color: #f4f4f4;
  padding: 0;
  margin: 0;
  background-image: radial-gradient(ellipse at 50% 40%, navy, black);
  background-repeat: no-repeat;
  background-attachment: fixed;
}

/* Global */
* {
  box-sizing: border-box;
}

.container {
  max-width: 80ch;
  padding: 0 2ch;
  margin: auto;
}

.solid {
  background: rgba(0, 0, 32, .5) no-repeat fixed center;
  height: auto;
  min-height: calc(100vh - 56px);
  padding: 10px 14px;
}

.full {
  overflow: hidden;
  padding: 6px 8px;

}

.main {
  float: left;
  width: 70%;
  padding: 0px 4px 0px 0px;
}

.right {
  float: left;
  width: 30%;
  text-align: center;
  padding: 10px 4px 10px 4px;
}

.frame-border {
  border: 2px solid #00c6ff;
  border-radius: 16px;
  background-color: rgba(0, 0 , 32, .4);
  padding-bottom: 6px;
}

.frame {
  float: left;
  width: 100%;
  padding: 12px;
}

.frame img {
  border-radius: 14px 14px 0px 0px;
  border-bottom: #0f0f19 4px solid;
  width: 100%;
  height: auto;

}

.frames-half {
  float: left;
  width: 50%;
}

.bold {
  font-weight: bold;
}

.subtitle {
  margin: -18px 0px -8px 0px;
  font-size: 14px;
  padding-bottom: 24px;
}

.caption {
  font-align: justify;
  margin: 6px 12px;
  padding: 0px 2px 4px 2px;
}

/* Links */
a:link {
  color: #f4f4f4;
}

a:visited {
  color: #e5f9ff;
}

a:hover {
  color: #00c6ff;
}

/* Header */
header {
  background: #23232d;
  border-bottom: #0f0f19 4px solid;
  overflow: hidden;
}

header a {
  float: left;
  padding: 12px;
  line-height: 24px;
  border-radius: 4px;
  text-align: center;
  text-decoration: none;
  font-size: 14px;
  font-weight: bold;
}

header #branding img{
  float: left;
  margin-top: -13px;
  max-height: 50px;
  margin-bottom: -13px;
}

header .header-right {
  margin-right: 10px;
  float: right;
}

header a.active {
  color: #00c6ff;
}

h1 {
  color: #00c6ff;
}

h2 {
  padding-top: 4px;
  color: #00c6ff;
}

p {
  text-indent: 2ch;
}

iframe {
  width: 100%;
  height: 400px;
}


hr {
  display: block;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: auto;
  margin-right: auto;
  border-style: inset;
  border-width: 1.5px;
  border-color: #00c6ff;
}

.center div {
  margin: 0;
  position: absolute;
  padding-top: 400px;
  padding-bottom: 160px;
  top: 40%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.border a {
  border-radius: 6px;
  border: 2px solid #00c6ff;
  background-color: rgba(0, 0 , 64, .5);
}

.pagination {
  text-align: center;
  padding: 8px 16px;
}

.pagination a {
  text-decoration: none;
  margin: 2px;
  padding: 6px 8px 3px 8px;
}

.vertical-menu a {
  display: block;
  padding: 13px 44px 11px 44px;
  margin-bottom: 2vh;
  text-align: center;
  text-decoration: none;
  font-size: 18pt;
}

.vertical-menu a:hover {
  color: #00c6ff;
  text-decoration: underline;
}

#contact div {
  padding-bottom: 1em;
}

footer {
  position: fixed;
  bottom: 0;
  height: 48px;
  width: 100%;
  color: #f4f4f4;
  background: #23232d;
  border-top: #0f0f19 4px solid;
  text-align: center;
}

/* For mobile phone: */
@media screen and (max-width: 620px) {
  .main, .right, .frames-half {
   width:100%;
  }
  .main {
    padding: 6px 10px
  }
  .right, .frame {
    padding: 10px;
  }
  font-size = 40px;
  top: 15px;
  right: 35px;
}

